# Towell

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
Editor/: premake5.lua
Editor/src/: Editor.cpp  Editor.h  Main.cpp  SampleScene.cpp  SampleScene.h
Engine/: premake5.lua
Engine/Shaders/: Shape.frag  Shape.vert  Sprite.frag  Sprite.vert
Engine/src/: Application.cpp  Application.h  Log.cpp  Log.h  Towell.h
Engine/src/asset/: Assets.cpp  Assets.h
Engine/src/input/: Input.cpp  Input.h  InputManager.h  KeyCode.h  SDLInputManager.cpp  SDLInputManager.h
Engine/src/math/: Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Engine/src/physics/: Physics.cpp  Physics.h
Engine/src/rendering/: CircleMesh.cpp  CircleMesh.h  Color.cpp  Color.h  Mesh.cpp  Mesh.h  QuadMesh.cpp  QuadMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  TriangleMesh.cpp  TriangleMesh.h  VertexArray.cpp  VertexArray.h
Engine/src/scene/: CircleCollider.cpp  CircleCollider.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Renderer2DComponent.cpp  Renderer2DComponent.h  RendererComponent.h  Scene.cpp  Scene.h  ShapeRenderer.cpp  ShapeRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  (+2 more)
Game/: SampleScene.h  premake5.lua
Game/src/: Main.cpp
Test/: Test.cpp  Test.h  premake5.lua
Test/src/: Main.cpp  Test.cpp  Test.h
scripts/: setup.bat
src/Editor/: CMakeLists.txt  Editor.cpp  Main.cpp
src/Engine/: Application.cpp  Application.h  CMakeLists.txt  Towell.cpp  Towell.h
(+27 files in other folders)
